# Supermarket_Management_System

./: CMakeLists.txt  README.md
supermarketCargoManagementSystem/: constSpace.h  main.cpp  objSupermarketInner.h  pageDependencies.cpp  pageDependencies.h  timePure.h
supermarketCargoManagementSystem/bridge/: about.txt  dailyGoods.txt  electricalAppliance.txt  food.txt  user.txt
