cmake_minimum_required(VERSION 3.28)
project(exerciseObject)

set(CMAKE_CXX_STANDARD 26)

add_executable(supermarketCargoManagementSystem. supermarketCargoManagementSystem/main.cpp
        supermarketCargoManagementSystem/main.cpp
        supermarketCargoManagementSystem/objSupermarketInner.h
        supermarketCargoManagementSystem/constSpace.h
        supermarketCargoManagementSystem/pageDependencies.h
        supermarketCargoManagementSystem/pageDependencies.cpp
        supermarketCargoManagementSystem/timePure.h
)
